--- a/cmd/goback/config.yaml
+++ b/cmd/goback/config.yaml
@@ -1,45 +1,79 @@
 jobs:
-  - dir: c:\temp
-    schedule:
-      full:
-        - 0 0 1 * *
-      incremental:
-        - 0 0 * * *
-    storages:
-      - dir: /backup
-      - host: sftp://127.0.0.1
-        username: devplayg
-        password: devplayg123!@#
-        dir: /backup1
-        port: 22
-      - host: ftp://127.0.0.1
-        username: devplayg
-        password: devplayg123!@#
-        dir: /backup2
-        port: 21
-    ignore:
-      - .jpg
-      - .iso
-  - dir: d:\data
-    schedule:
-      full:
-        - 0 0 1 * *
-      incremental:
-        - 0 0 * * *
-    method:
-      - dir: /backup1
-      - host: sftp://127.0.0.1
-        user: devplayg
-        pass: devplayg123!@#
-        dir: /backup1
-        port: 22
-      - host: ftp://127.0.0.1
-        user: devplayg
-        pass: devplayg123!@#
-        dir: /backup2
-        port: 21
-    ignore:
+  - type: 2
+    srcDirs:
+      - aaa
+      - bbb
+  - type: 3
+    srcDirs:
+      - aaa
+      - bbb
+
+#jobs:
+#  - type: 2
+#    SrcDirs:
+#      - asdfasdfasdf
+#      - c:\temp
+#      - d:\data
+#    schedule: 0 0 * * *
+#    storage:
+#      dir: d:\backup\incremental
+#      ignore:
+#        - .iso
+#        - .txt
+#  - type: 2
+#    srcDirs:
+#      - E:\09. 음악
+#    schedule: 0 0 * * *
+#    storage:
+#      host: ftp://127.0.0.1
+#      username: devplayg
+#      password: devplayg123!@#
+#      dir: /backup2
+#      port: 21
 
 
-
-
+#jobs:
+#  - dir: c:\temp
+#    schedule:
+#      full:
+#        - 0 0 1 * *
+#      incremental:
+#        - 0 0 * * *
+#    storages:
+#      - dir: /backup
+#      - host: sftp://127.0.0.1
+#        username: devplayg
+#        password: devplayg123!@#
+#        dir: /backup1
+#        port: 22
+#      - host: ftp://127.0.0.1
+#        username: devplayg
+#        password: devplayg123!@#
+#        dir: /backup2
+#        port: 21
+#    ignore:
+#      - .jpg
+#      - .iso
+#  - dir: d:\data
+#    schedule:
+#      full:
+#        - 0 0 1 * *
+#      incremental:
+#        - 0 0 * * *
+#    method:
+#      - dir: /backup1
+#      - host: sftp://127.0.0.1
+#        user: devplayg
+#        pass: devplayg123!@#
+#        dir: /backup1
+#        port: 22
+#      - host: ftp://127.0.0.1
+#        user: devplayg
+#        pass: devplayg123!@#
+#        dir: /backup2
+#        port: 21
+#    ignore:
+#
+#
+#
+#
